RESOLVED FIXED183056
Web Inspector: REGRESSION (r228349): ImageBitmap builtin is now runtime guarded
https://bugs.webkit.org/show_bug.cgi?id=183056
Summary Web Inspector: REGRESSION (r228349): ImageBitmap builtin is now runtime guarded
Matt Baker
Reported 2018-02-22 13:19:27 PST
Summary: ImageBitmap builtin is now runtime guarded. Since it's used by Inspector ImageUtilities it must be manually enabled. Regressed in <https://trac.webkit.org/changeset/228349>.
Attachments
Patch (1.54 KB, patch)
2018-02-22 13:30 PST, Matt Baker
no flags
Radar WebKit Bug Importer
Comment 1 2018-02-22 13:19:43 PST
Matt Baker
Comment 2 2018-02-22 13:30:36 PST
Joseph Pecoraro
Comment 3 2018-02-22 14:31:50 PST
Comment on attachment 334472 [details] Patch r=me
WebKit Commit Bot
Comment 4 2018-02-22 14:58:55 PST
Comment on attachment 334472 [details] Patch Clearing flags on attachment: 334472 Committed r228937: <https://trac.webkit.org/changeset/228937>
WebKit Commit Bot
Comment 5 2018-02-22 14:58:56 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.