Web Inspector: REGRESSION (r228349): ImageBitmap builtin is now runtime guarded https://bugs.webkit.org/show_bug.cgi?id=183056 <rdar://problem/37799067>

Reviewed by Joseph Pecoraro.

* WebProcess/WebPage/WebInspectorUI.cpp:
(WebKit::WebInspectorUI::WebInspectorUI):


Canonical link: https://commits.webkit.org/198806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228937 268f45cc-cd09-0410-ab3c-d52691b4dbfc